app/styles/ui/changes/_changes-view.scss
.changed-file {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  min-width: 0;

  .header {
    background: var(--box-alt-background-color);
    border-bottom: 1px solid var(--diff-border-color);

    display: flex;
    flex-direction: row;
    flex-shrink: 0;
    flex-grow: 0;

    padding: var(--spacing-half) var(--spacing);

    .path {
      flex-grow: 1;
      display: flex;
    }

    @include octicon-status;

    .octicon {
      flex-shrink:0;
      vertical-align: text-bottom;
      position: relative;
      top: 1px;
    }
  }

  .panel {
    display: flex;
    flex: 1;
    align-items: center;
    justify-content: center;
    text-align: center;
  }
}

.diff-wrapper {
  display: flex;
  flex-grow: 1;
  min-width: 0;
}

